tests/sample_manifests/demo_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  selector:
    matchLabels:
      run: my-nginx
  replicas: 1
  template:
    metadata:
      labels:
        run: my-nginx
    spec:
      containers:
        - name: my-nginx
          image: docker.io/library/nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: custom-html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
        - name: sidecar
          image: podmesh/sidecar:latest
          env:
            - name: PODMESH_NAMESPACE
              value: test-namespace
            - name: PODMESH_WORKLOAD
              value: nginx
            - name: MANIFEST_ID
              value: test-namespace/nginx
      volumes:
        - name: custom-html
          configMap:
            name: nginx-custom-content
            items:
              - key: index.html
                path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
spec:
  selector:
    run: my-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
spec:
  rules:
    - host: demo-nginx.mesh.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-nginx-svc
                port:
                  number: 80
