tests/sample_manifests/demo_deployment_without_sidecar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  selector:
    matchLabels:
      run: my-nginx
  replicas: 1
  template:
    metadata:
      labels:
        run: my-nginx
    spec:
      containers:
        - name: my-nginx
          image: docker.io/library/nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
spec:
  selector:
    run: my-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
spec:
  rules:
    - host: demo-nginx.mesh.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-nginx-svc
                port:
                  number: 80
