tests/sample_manifests/deployment_no_resources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: no-resources
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 1
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/library/nginx
          ports:
            - containerPort: 80
