tests/sample_manifests/privileged_container.yml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-test
spec:
  containers:
    - name: app
      image: docker.io/library/nginx
      ports:
        - containerPort: 80
      securityContext:
        privileged: true
